fix menu offsets and indexe

--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -75,7 +75,7 @@
 
 	.icon.big { width: 28px; height: 28px; background-size: 20px 20px; border-radius: 6px; }
 	.icon.big.home { width: 32px; }
-	.icon.big:hover, .icon.big.active { background-color: #f3f2ec; }
+	.icon.big:hover, .icon.big.hover { background-color: #f3f2ec; }
 
 	.path { 
 		border: 1px solid #fff; border-radius: 6px; display: inline-block; vertical-align: top; height: 28px; 
