--- a/src/scss/menu/button.scss
+++ b/src/scss/menu/button.scss
@@ -1,9 +1,9 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuButton { white-space: nowrap; }
+	.menu.menuButton { white-space: nowrap; height: 44px; line-height: 44px; padding: 0px 14px; }
 	.menu.menuButton {
-		.item { display: inline-block; @include text-common; margin-right: 16px; color: $colorDarkGrey; transition: $transitionFast; }
+		.item { display: inline-block; @include text-common; margin-right: 16px; color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; }
 		.item:hover { color: $colorBlack; }
 		.item:last-child { margin: 0px; }
 	}	
