--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -131,7 +131,7 @@
 		.line { height: 1px; margin: 8px 14px; background: $colorLightGrey; }
 		.input { border-radius: 4px; }
 
-		.sectionName { padding: 5px 14px; @include text-small; color: $colorDarkGrey; }
+		.sectionName { padding: 5px 14px; @include text-small; color: $colorDarkGrey; font-weight: 500; }
 		
 		.section { padding: 8px 0px 0px 0px; }
 		.section::after {
@@ -140,7 +140,7 @@
 		.section:first-child { padding: 0px; }
 		.section:last-child { border: 0px; }
 		.section:last-child::after { display: none; }
-		.section > .name { padding: 3px 14px; margin-bottom: 2px; @include text-small; color: $colorDarkGrey; display: block; }
+		.section > .name { padding: 3px 14px; margin-bottom: 2px; @include text-small; color: $colorDarkGrey; display: block; font-weight: 500; }
 	}
 
 	.menu.horizontal {
