--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -75,7 +75,7 @@
 		}
 		.item.isReadOnly.hover::before { opacity: 0; }
 
-		.item.add { color: $colorDarkGrey; line-height: 20px; }
+		.item.add { color: #929082; line-height: 20px; }
 		
 		.item {
 			.name { display: inline-block; vertical-align: top; position: relative; }
