--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -39,7 +39,7 @@
 	#documents {
 		.item { 
 			width: 208px; height: 124px; background: #fff; border-radius: 12px; display: inline-block; vertical-align: top;
-			margin: 0px 16px 16px 0px; padding: 16px 38px 16px 16px; position: relative; cursor: pointer; user-select: none;
+			margin: 0px 16px 16px 0px; padding: 16px; position: relative; cursor: pointer; user-select: none;
 		}
 		
 		.item {
