--- a/src/scss/component/tag.scss
+++ b/src/scss/component/tag.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .tagItem {
-	padding: 0px 4px; @include text-small; border-radius: 3px; white-space: nowrap; position: relative;
+	padding: 0px 4px; @include text-common; line-height: 18px; border-radius: 3px; white-space: nowrap; position: relative;
 	display: inline-block; vertical-align: middle; max-width: 100%; height: 18px;
 }
 .tagItem {
