--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -14,9 +14,8 @@
 		.sides { display: flex; }
 
 		.info { padding: 6px 2px 6px 0px; line-height: 20px; width: 30%; min-width: 40px; flex-shrink: 0; @include text-overflow-nw; }
-		.info.noValue { width: 100%; }
+		.info.noValue { width: 100%; color: #cbc9bd; cursor: pointer; }
 		.info {
-			.input { width: calc(100% - 24px); height: 20px; line-height: 20px; }
 			.name { 
 				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
 				width: calc(100% - 24px); color: #6c6a5f;
@@ -69,12 +68,6 @@
 
 		.cell.isEditing.c-longText, .cell.isEditing.c-file { 
 			.cellContent { box-shadow: 0px 0px; border: 0px; padding: 5px 8px; }
-		}
-	}
-
-	.block.blockRelation.isReadOnly > .wrapContent > .selectable > .dropTarget {
-		.info {
-			.input { visibility: hidden; }
 		}
 	}
 }
