--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -27,14 +27,16 @@
 		.items { height: 100%; }
 		.item.empty { padding: 14px; }
 
-		.sectionName::before { content: ""; display: block; width: 100%; height: 1px; margin: 6px 0px 13px 0px; background: $colorLightGrey; }
+		.sectionName { padding: 0px 14px 4px 14px; }
+		.sectionName::before { content: ""; display: block; width: 100%; height: 1px; margin: 8px 0px 11px 0px; background: $colorLightGrey; }
+		.sectionName.first { padding-top: 4px; }
 		.sectionName.first::before { display: none; }
 	}
 	.menu.menuBlockAdd {
-		.item.withColor.gray {
-			.icon, .iconObject { background-color: #f3f2ec; }
+		.item.isBig {
+			.iconObject { background-color: #f3f2ec; }
 		}
-		.item.withColor {
+		.item.isBig {
 			.icon.text { background-image: url('~img/icon/menu/action/block/text1.svg'); }
 			.icon.list { background-image: url('~img/icon/menu/action/block/list1.svg'); }
 			
