--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -31,6 +31,23 @@
 		.sectionName::before { content: ""; display: block; width: 100%; height: 1px; margin: 8px 0px 11px 0px; background: $colorLightGrey; }
 		.sectionName.first { padding-top: 4px; }
 		.sectionName.first::before { display: none; }
+
+		.sides, .item.add { display: flex; padding: 6px 14px; }
+
+		.info { 
+			width: 154px; @include text-overflow-nw; line-height: 20px; border-radius: 4px; transition: background 0.2s ease-in-out; 
+			flex-shrink: 0; margin-right: 6px;
+		}
+
+		.item {
+			.icon.plus { margin-right: 4px; background-image: url('~img/icon/plus/menu0.svg'); }
+		}
+		.item * { cursor: pointer; }
+
+		.cellContent { overflow: hidden; height: 20px; line-height: 20px; }
+		.cellContent.c-longText {
+			.name { -webkit-line-clamp: 1; -webkit-box-orient: vertical; display: -webkit-box; }
+		}
 	}
 	.menu.menuBlockAdd {
 		.item.isBig {
