new template button + refactoring

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,6 @@
 $colorLightGrey: #eae9e0;
-$colorDarkGrey: #aca996;
+$colorMediumGrey: #aca996;
+$colorDarkGrey: #929082;
 $colorBlack: #2c2b27;
 $colorYellow: #ecd91b;
 $colorOrange: #ffb522;
@@ -17,7 +18,7 @@ $transitionFast: all 0.2s ease-in-out;
 @mixin text-overflow { overflow: hidden; text-overflow: ellipsis; }
 @mixin text-overflow-nw { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
-@mixin text-very-small { font-size: 11px; line-height: 18px; letter-spacing: 0.4px; color: $colorDarkGrey; }
+@mixin text-very-small { font-size: 11px; line-height: 18px; letter-spacing: 0.4px; color: $colorMediumGrey; }
 @mixin text-small { font-size: 12px; line-height: 18px; letter-spacing: 0.16px; }
 @mixin text-common { font-size: 14px; line-height: 22px; letter-spacing: 0.04px; }
 @mixin text-paragraph { font-size: 16px; line-height: 24px; letter-spacing: -0.08px; }
