--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -48,7 +48,7 @@
 	.icon.clear { display: none; }
 
 	.name { display: inline-block; vertical-align: top; }
-	.empty { vertical-align: middle; color: $colorDarkGrey; display: none; }
+	.empty { vertical-align: middle; display: none; }
 }
 
 .cellContent.c-file {
