--- a/src/scss/component/sync.scss
+++ b/src/scss/component/sync.scss
@@ -2,7 +2,7 @@
 
 .sync {
 	background: #f3f2ec; border-radius: 4px; @include text-small; padding: 0px 6px; display: inline-block; vertical-align: middle;
-	color: $colorDarkGrey; white-space: nowrap;
+	color: $colorMediumGrey; white-space: nowrap;
 }
 .sync {
 	.bullet { 
