--- a/src/scss/media/dark.scss
+++ b/src/scss/media/dark.scss
@@ -1,6 +1,6 @@
 $colorWhite: #fff;
 $colorBlack: #333;
-$colorDarkGrey: $colorWhite;
+$colorMediumGrey: $colorWhite;
 
 /*@media (prefers-color-scheme: dark) {*/
 html.dark {
