--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -75,7 +75,7 @@
 			.inner.bgColor-default { box-shadow: 0px 0px 0px 1px $colorLightGrey inset; background: #fff; }
 			
 			.inner.textColor-black { background: $colorBlack; }
-			.inner.textColor-grey { background: $colorDarkGrey; }
+			.inner.textColor-grey { background: $colorMediumGrey; }
 			.inner.textColor-yellow { background: $colorYellow; }
 			.inner.textColor-orange { background: $colorOrange; }
 			.inner.textColor-red { background: $colorRed; }
