--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -7,7 +7,7 @@
 
 		.item { padding: 4px 10px; position: relative; white-space: nowrap; display: flex; }
 		.item {
-			.grey { color: $colorDarkGrey; }
+			.grey { color: $colorMediumGrey; }
 			.iconObject { margin-right: 10px; }
 
 			.buttons { line-height: 44px; }
