--- a/src/scss/menu/dataview/sort.scss
+++ b/src/scss/menu/dataview/sort.scss
@@ -13,7 +13,7 @@
 			
 			.select { border: 0px; padding: 0px; display: block; }
 			.select:hover, .select.active { background: none; }
-			.select.grey { color: $colorDarkGrey; }
+			.select.grey { color: $colorMediumGrey; }
 			.select {
 				.icon.arrow { display: none; }
 			}
