--- a/src/scss/menu/relation.scss
+++ b/src/scss/menu/relation.scss
@@ -9,6 +9,6 @@
 		.item {
 			.name { @include text-overflow-nw; width: calc(100% - 26px); }
 		}
-		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
+		.label { color: $colorMediumGrey; @include text-common; padding: 0px 16px; }
 	}
 }
