--- a/src/scss/menu/select.scss
+++ b/src/scss/menu/select.scss
@@ -29,7 +29,7 @@
 	}
 
 	.menu.menuSelect.button {
-		.item { white-space: nowrap; display: inline-block; margin-right: 16px; color: $colorDarkGrey; font-weight: 500; }
+		.item { white-space: nowrap; display: inline-block; margin-right: 16px; color: $colorMediumGrey; font-weight: 500; }
 		.item:hover { color: $colorBlack; }
 		.item:last-child { margin-right: 0px; }
 	}
