--- a/src/scss/menu/thread.scss
+++ b/src/scss/menu/thread.scss
@@ -6,7 +6,7 @@
 
 	.menu.menuThreadList,
 	.menu.menuThreadStatus {
-		.description { color: $colorDarkGrey; display: flex; }
+		.description { color: $colorMediumGrey; display: flex; }
 		.item { line-height: 22px; }
 		.side { width: 50%; }
 		.side.right { text-align: right; white-space: nowrap; }
