--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -16,9 +16,9 @@
 
 		.icon.back, .icon.forward { width: 20px; height: 20px; }
 
-		.isDone { color: $colorDarkGrey; }
+		.isDone { color: $colorMediumGrey; }
 
-		.views { @include text-header3; color: $colorDarkGrey; }
+		.views { @include text-header3; color: $colorMediumGrey; }
 		.views {
 			.item { 
 				margin-right: 20px; display: inline-block; vertical-align: middle; transition: color 0.2s ease-in-out; cursor: pointer; 
@@ -31,7 +31,7 @@
 			.item.btn { line-height: 20px; }
 		}
 		
-		.buttons { display: flex; margin-bottom: 8px; font-weight: 500; color: $colorDarkGrey; }
+		.buttons { display: flex; margin-bottom: 8px; font-weight: 500; color: $colorMediumGrey; }
 		.buttons {
 			.side { padding: 24px 0px; height: 74px; width: 50%; white-space: nowrap; }
 			.side.left { padding-left: 14px; }
