--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -26,7 +26,7 @@ input.button { line-height: 1; }
 }
 
 .button.simple { 
-	height: auto; line-height: 1; padding: 0px; color: $colorDarkGrey; font-weight: bold; line-height: 1.43; 
+	height: auto; line-height: 1; padding: 0px; color: $colorMediumGrey; font-weight: bold; line-height: 1.43; 
 	letter-spacing: 0.1px; 
 }
 .button.simple:hover { color: $colorBlack; }
