--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -17,7 +17,7 @@
 .cover.type2.teal { background-color: #9bb0b7; }
 .cover.type2.green { background-color: #136E41; }
 .cover.type2.lightgrey { background-color: $colorLightGrey; }
-.cover.type2.darkgrey { background: $colorDarkGrey; }
+.cover.type2.darkgrey { background: $colorMediumGrey; }
 .cover.type2.black { background-color: $colorBlack; }
 		
 .cover.type3.yellow { background-image: linear-gradient(180deg, $colorOrange 0%, $colorYellow 105.47%); }
