--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -23,7 +23,7 @@
 		.buttons { position: absolute; bottom: 0px; opacity: 0; }
 		
 		.btn { 
-			background: #fff; font-weight: 500; font-size: 14px; color: $colorDarkGrey; cursor: pointer; display: inline-block; transition: background 0.2s ease-in-out;
+			background: #fff; font-weight: 500; font-size: 14px; color: $colorMediumGrey; cursor: pointer; display: inline-block; transition: background 0.2s ease-in-out;
 			margin-right: 10px; height: 28px; line-height: 26px; padding: 0px 10px; border-radius: 6px;
 		}
 		.btn:last-child { margin: 0px; }
