--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -22,7 +22,7 @@
 	.icon.fav { width: 16px; height: 16px; margin: -4px 6px 0px 0px; }
 	
 	.head { 
-		padding: 10px 16px 10px 16px; letter-spacing: -0.08px; color: $colorDarkGrey; font-weight: 500; position: absolute; left: 0px; width: 100%;
+		padding: 10px 16px 10px 16px; letter-spacing: -0.08px; color: $colorMediumGrey; font-weight: 500; position: absolute; left: 0px; width: 100%;
 	}
 	.head {
 		.item { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; transition: $transitionFast; }
