--- a/src/scss/component/objectPreviewBlock.scss
+++ b/src/scss/component/objectPreviewBlock.scss
@@ -18,7 +18,7 @@
 		.icon.checkbox.active { background-image: url('~img/icon/object/checkbox1.svg'); }
 
 		.description { @include text-small; @include text-overflow-nw; }
-		.author { @include text-very-small; color: $colorDarkGrey; }
+		.author { @include text-very-small; color: $colorMediumGrey; }
 	}
 
 	.blocks { z-index: 1; }
@@ -35,7 +35,7 @@
 				.icon.toggle { background-image: url('~img/icon/object/preview/toggle.svg'); }
 
 				.number { 
-					min-width: 16px; @include text-very-small; line-height: 16px; text-align: center; color: #929082; margin-right: 4px; flex-shrink: 0; 
+					min-width: 16px; @include text-very-small; line-height: 16px; text-align: center; color: $colorDarkGrey; margin-right: 4px; flex-shrink: 0; 
 					vertical-align: top; 
 				}
 
