--- a/src/scss/menu/account.scss
+++ b/src/scss/menu/account.scss
@@ -11,7 +11,7 @@
 			.icon.user { vertical-align: top; margin-right: 8px; }
 			.info { display: inline-block; vertical-align: top; width: calc(100% - 48px); }
 			.name { @include text-common; font-weight: 500; }
-			.description { @include text-small; color: $colorDarkGrey; margin-top: -2px; }
+			.description { @include text-small; color: $colorMediumGrey; margin-top: -2px; }
 			.icon.check { margin: -2px 4px 0px 0px; display: none; width: 12px; height: 12px; background-image: url('~img/icon/menu/account/check.svg'); }
 		}
 		.item.active {
