--- a/src/scss/menu/block/link.scss
+++ b/src/scss/menu/block/link.scss
@@ -5,7 +5,7 @@
 	.menu.menuBlockLink {
 		.flex { width: 100%; }
 		.input { width: 100%; height: 22px; padding: 0px; flex: auto; width: calc(100% - 100px); }
-		.buttons { flex: auto; white-space: nowrap; width: 100px; text-align: right; color: $colorDarkGrey; font-weight: 500; }
+		.buttons { flex: auto; white-space: nowrap; width: 100px; text-align: right; color: $colorMediumGrey; font-weight: 500; }
 		.buttons {
 			.btn { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; transition: $transitionFast; }
 			.btn:last-child { margin: 0px; }
