--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -49,7 +49,7 @@
 			background: rgba(255,255,255, 0.7);
 		}
 
-		.tabs { padding: 10px 0px; border-bottom: 1px solid #eae9e0; margin: 0px 14px; white-space: nowrap; font-weight: 600; color: $colorDarkGrey; }
+		.tabs { padding: 10px 0px; border-bottom: 1px solid #eae9e0; margin: 0px 14px; white-space: nowrap; font-weight: 600; color: $colorMediumGrey; }
 		.tabs {
 			.tab { display: inline-block; vertical-align: top; transition: $transitionFast; cursor: pointer; margin-right: 16px; position: relative; }
 			.tab:hover, .tab.active { color: $colorBlack; }
@@ -59,7 +59,7 @@
 		.inputWrap { padding: 0px 14px 8px 14px; }
 		.input { border: 1px solid $colorLightGrey; padding: 0px 8px; }
 	
-		.title { @include text-small;  margin: 0px; padding: 7px 14px; font-weight: 400; color: $colorDarkGrey; }
+		.title { @include text-small;  margin: 0px; padding: 7px 14px; font-weight: 400; color: $colorMediumGrey; }
 	
 		.item { padding: 4px 14px; @include text-common; line-height: 20px; position: relative; cursor: pointer; width: 100%; background: #fff; }
 		.item.isDragging { box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
@@ -75,7 +75,7 @@
 		}
 		.item.isReadOnly.hover::before { opacity: 0; }
 
-		.item.add { color: #929082; line-height: 20px; }
+		.item.add { color: $colorDarkGrey; line-height: 20px; }
 		
 		.item {
 			.name { display: inline-block; vertical-align: top; position: relative; }
@@ -100,8 +100,6 @@
 			.iconObject { margin-right: 6px; vertical-align: top; flex-shrink: 0; }
 		}
 
-		.item.empty { color: $colorDarkGrey; }
-		
 		.item.withDescription { padding: 8px 14px; height: 56px; }
 		.item.withDescription {
 			.icon, .iconObject { width: 40px; height: 40px; border-radius: 6px; position: absolute; left: 14px; top: 8px; }
@@ -123,7 +121,7 @@
 			}
 
 			.caption { 
-				@include text-overflow-nw; display: inline-block; vertical-align: top; color: $colorDarkGrey; @include text-small; text-align: right;
+				@include text-overflow-nw; display: inline-block; vertical-align: top; color: $colorMediumGrey; @include text-small; text-align: right;
 				flex-shrink: 0; line-height: 20px;
 			}
 		}
@@ -131,7 +129,7 @@
 		.line { height: 1px; margin: 8px 14px; background: $colorLightGrey; }
 		.input { border-radius: 4px; }
 
-		.sectionName { padding: 5px 14px; @include text-small; color: $colorDarkGrey; font-weight: 500; }
+		.sectionName { padding: 5px 14px; @include text-small; color: $colorMediumGrey; font-weight: 500; }
 		
 		.section { padding: 8px 0px 0px 0px; }
 		.section::after {
@@ -140,7 +138,7 @@
 		.section:first-child { padding: 0px; }
 		.section:last-child { border: 0px; }
 		.section:last-child::after { display: none; }
-		.section > .name { padding: 3px 14px; margin-bottom: 2px; @include text-small; color: $colorDarkGrey; display: block; font-weight: 500; }
+		.section > .name { padding: 3px 14px; margin-bottom: 2px; @include text-small; color: $colorMediumGrey; display: block; font-weight: 500; }
 	}
 
 	.menu.horizontal {
