--- a/src/scss/menu/dataview/object.scss
+++ b/src/scss/menu/dataview/object.scss
@@ -11,7 +11,7 @@
 		.item {
 			.name { @include text-overflow-nw; width: calc(100% - 26px); }
 		}
-		.label { color: $colorDarkGrey; @include text-common; padding: 0px 16px; }
+		.label { color: $colorMediumGrey; @include text-common; padding: 0px 16px; }
 	}
 
 	.menu.menuDataviewObjectValues { width: 288px; }
