--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -86,7 +86,7 @@
 				@include text-common; line-height: 20px; max-height: 60px; width: 100%; word-break: break-word;
 				-webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; display: -webkit-box;
 			}
-			.type { @include text-small; color: $colorDarkGrey; position: absolute; bottom: 0px; left: 0px; padding: 0px 16px 11px 16px; }
+			.type { @include text-small; color: $colorMediumGrey; position: absolute; bottom: 0px; left: 0px; padding: 0px 16px 11px 16px; }
 			
 			.icon.more { 
 				background-image: url('~img/icon/index/more0.svg'); width: 20px; height: 20px; cursor: pointer; position: absolute;
