--- a/src/scss/page/main/newset.scss
+++ b/src/scss/page/main/newset.scss
@@ -4,7 +4,7 @@
 	.wrapper { width: 704px; margin: 0px auto; padding: 96px 0px 80px 0px; }
 	.wrapper {
 		.title { @include text-title; padding: 10px 0px 22px 0px; }
-		.label { @include text-paragraph; margin-bottom: 28px; color: $colorDarkGrey; }
+		.label { @include text-paragraph; margin-bottom: 28px; color: $colorMediumGrey; }
 
 		.items {
 			.item { line-height: 32px; transition: $transitionFast; cursor: pointer; }
