--- a/src/scss/page/main/relation.scss
+++ b/src/scss/page/main/relation.scss
@@ -34,7 +34,7 @@
 
 				.icon { flex-shrink: 0; width: 20px; height: 20px; margin-right: 8px; }
 				.name { width: 200px; @include text-overflow-nw; line-height: 20px; color: #6c6a5f; }
-				.value { color: $colorDarkGrey; padding: 4px; line-height: 20px; cursor: pointer; transition: $transitionFast; border-radius: 4px; }
+				.value { color: $colorMediumGrey; padding: 4px; line-height: 20px; cursor: pointer; transition: $transitionFast; border-radius: 4px; }
 				.value:hover { background: rgba(172,169,150,0.1); }
 			}
 		}
