--- a/src/scss/page/main/set.scss
+++ b/src/scss/page/main/set.scss
@@ -26,7 +26,7 @@
 
 			.wrap { position: relative; }
 			.wrap {
-				.placeHolder { position: absolute; left: 0px; top: 0px; color: $colorDarkGrey; }
+				.placeHolder { position: absolute; left: 0px; top: 0px; color: $colorMediumGrey; }
 			}
 		}
 	}
