--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -26,7 +26,7 @@
 
 			.wrap { position: relative; }
 			.wrap {
-				.placeHolder { position: absolute; left: 0px; top: 0px; color: $colorDarkGrey; }
+				.placeHolder { position: absolute; left: 0px; top: 0px; color: $colorMediumGrey; }
 			}
 		}
 
@@ -34,10 +34,22 @@
 		.section:last-child { margin: 0px; }
 
 		.section {
-			.title { @include text-header3; margin-bottom: 14px; }
+			.title { @include text-header3; margin-bottom: 14px; position: relative; }
 		}
 
 		.section.template {
+			.btn { 
+				position: absolute; right: 0px; top: 50%; margin-top: -10px; @include text-common; line-height: 20px; font-weight: normal; color: $colorDarkGrey; 
+				cursor: pointer; transition: $transitionFast;
+			}
+			.btn {
+				.icon.plus { vertical-align: top; width: 20px; height: 20px; background-image: url('~img/icon/plus/template0.svg'); }
+			}
+			.btn:hover { color: $colorBlack; }
+			.btn:hover {
+				.icon.plus { background-image: url('~img/icon/plus/template1.svg'); }
+			}
+
 			.objectPreviewBlock { width: 344px; height: 216px; display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; }
 			.objectPreviewBlock:last-child { margin-right: 0px; }
 
@@ -65,12 +77,12 @@
 
 				.icon { flex-shrink: 0; width: 20px; height: 20px; margin-right: 8px; }
 				.name { width: 200px; @include text-overflow-nw; line-height: 20px; color: #6c6a5f; }
-				.value { color: $colorDarkGrey; padding: 4px; line-height: 20px; cursor: pointer; transition: $transitionFast; border-radius: 4px; }
+				.value { color: $colorMediumGrey; padding: 4px; line-height: 20px; cursor: pointer; transition: $transitionFast; border-radius: 4px; }
 			}
 
 			.item.add { line-height: 20px; }
 			.item.add {
-				.name { color: #929082; }
+				.name { color: $colorDarkGrey; }
 			}
 		}
 
@@ -100,7 +112,6 @@
 
 			.cell { padding: 14px; border-bottom: 1px solid #eae9e0; vertical-align: top; position: relative; word-break: break-word; }
 			.cell.c-select { padding-bottom: 8px; }
-			.cell.empty { color: $colorDarkGrey; }
 		}
 	}
 }
