--- a/src/scss/popup/archive.scss
+++ b/src/scss/popup/archive.scss
@@ -13,7 +13,7 @@
 		}
 		
 		.btn { 
-			display: inline-block; vertical-align: middle; margin-right: 20px; color: $colorDarkGrey; cursor: pointer;
+			display: inline-block; vertical-align: middle; margin-right: 20px; color: $colorMediumGrey; cursor: pointer;
 			transition: $transitionFast; margin: 0px;
 		}
 		.btn:last-child { margin: 0px; }
