--- a/src/scss/popup/help.scss
+++ b/src/scss/popup/help.scss
@@ -4,7 +4,7 @@
 	.popup.popupHelp {
 		.innerWrap { width: 864px; height: calc(100% - 128px); padding: 40px 0px 0px 0px; }
 
-		.head { display: flex; position: absolute; top: 0px; left: 0px; width: 100%; padding: 10px 20px; color: $colorDarkGrey; }
+		.head { display: flex; position: absolute; top: 0px; left: 0px; width: 100%; padding: 10px 20px; color: $colorMediumGrey; }
 		.head {
 			.side { width: 50%; }
 			.side.right { text-align: right; }
