--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -9,7 +9,7 @@
 		.empty { height: 100%; line-height: 360px; padding: 16px; text-align: center; }
 		.empty {
 			b { display: block; font-weight: 400; color: $colorBlack; }
-			.txt { line-height: 24px; color: $colorDarkGrey; }
+			.txt { line-height: 24px; color: $colorMediumGrey; }
 		}
 		
 		.items {
@@ -52,7 +52,7 @@
 
 			.item.empty { line-height: 78px; cursor: default; }
 			.item.empty {
-				.name { display: inline-block; vertical-align: middle; color: $colorDarkGrey; }
+				.name { display: inline-block; vertical-align: middle; }
 			}
 		}
 
