--- a/src/scss/popup/template.scss
+++ b/src/scss/popup/template.scss
@@ -5,22 +5,22 @@
 		.innerWrap { width: 832px; height: 448px; margin: -224px 0px 0px -416px; padding: 43px 0px 56px 0px; }
 		.content { position: static; }
 
-		.item { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; }
+		.item { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; position: relative; }
 		.item {
 			.objectPreviewBlock { width: 344px; height: 216px; margin-bottom: 10px; }
-			.objectPreviewBlock {
-				.border { transition: $transitionFast; }
-			}
+		}
+		.item:before {
+			content: ""; background: rgba(0,0,0,0.05); position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;
+			z-index: 2; height: 216px; border-radius: 8px; display: none;
 		}
 
-		.item > .name { padding: 0px 14px; @include text-overflow-nw; color: $colorDarkGrey; transition: $transitionFast; }
+		.item > .name { padding: 0px 14px; @include text-overflow-nw; color: $colorDarkGrey; }
 		.item:last-child { margin-right: 0px; }
-		.item.hover .border { border-color: $colorBlack; }
-		.item.hover > .name { color: $colorBlack; }
+		.item.hover:before { display: block; }
 
 		.icon.arrow { 
 			position: absolute; top: 0px; width: 32px; height: 216px; background-image: url('~img/arrow/template0.svg'); 
-			cursor: pointer; background-size: 8px 32px; z-index: 1;
+			cursor: pointer; background-size: 8px 32px; z-index: 10;
 		}
 		.icon.arrow:hover { background-image: url('~img/arrow/template1.svg'); }
 		.icon.arrow.disabled:hover { background-image: url('~img/arrow/template0.svg'); }
