--- a/src/scss/popup/template.scss
+++ b/src/scss/popup/template.scss
@@ -10,7 +10,7 @@
 			.objectPreviewBlock { width: 344px; height: 216px; margin-bottom: 10px; }
 		}
 		.item:before {
-			content: ""; background: rgba(0,0,0,0.05); position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;
+			content: ""; background: rgba(134, 125, 66, 0.08); position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;
 			z-index: 2; height: 216px; border-radius: 8px; display: none;
 		}
 
