--- a/src/scss/popup/page.scss
+++ b/src/scss/popup/page.scss
@@ -3,7 +3,7 @@
 .popups {
 	.popup.popupPage {
 		.innerWrap { width: 960px; height: calc(100% - 128px); padding: 0px; }
-
+		.page { padding: 0px; }
 		.footer { display: none; }
 
 		.pageMainEdit {
