--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -11,7 +11,7 @@
 		}
 
 		.loaderWrapper { border-radius: 4px; border: solid 1px #d2d0c2; height: 48px; width: 100%; }
-		.error { margin: 0px; @include text-small; }
+		.error { margin: 0px; @include text-small; line-height: 22px; }
 		
 		.wrap { max-width: 100%; position: relative; display: inline-block; overflow: hidden; }
 		.media { width: 100%; display: block; }
