--- a/src/scss/component/button.scss
+++ b/src/scss/component/button.scss
@@ -14,6 +14,9 @@
 .button.grey.filled { background: $colorLightGrey; color: #fff; box-shadow: 0px 0px; }
 .button.grey.filled:hover { box-shadow: 0px 0px; }
 
+.button.dark { background: rgba(0,0,0,0.3); color: #fff; }
+.button.dark:hover { background: rgba(0,0,0,0.4); }
+
 .button.blank { line-height: 36px; background: none; border: solid 1px $colorLightGrey; }
 .button.blank:hover { border-color: $colorBlack; }
 
