--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -4,6 +4,17 @@
 .editorWrapper {
 	.blocks { margin-left: -48px; }
 
+	.note { 
+		background: linear-gradient(270deg, #262cd2 0%, #0c82ef 100%); border-radius: 4px; height: 80px; color: #fff; position: absolute; 
+		left: 16px; top: 38px; width: calc(100% - 32px); line-height: 80px; text-align: center; z-index: 1;
+	}
+	.note {
+		.inner { display: inline-block; width: 704px; margin: 0px auto; vertical-align: middle; line-height: 1; }
+		.sides { display: flex; }
+		.side.left { width: 576px; margin-right: 34px; text-align: left; @include text-common; }
+		.side.right { text-align: right; }
+	}
+
 	.editor {
 		.icon.buttonAdd { 
 			width: 20px; height: 20px; position: absolute; z-index: 5; cursor: pointer; user-select: none;
