--- a/src/scss/page/main/type.scss
+++ b/src/scss/page/main/type.scss
@@ -50,34 +50,10 @@
 				.icon.plus { background-image: url('~img/icon/plus/template1.svg'); }
 			}
 
-			.item { display: inline-block; vertical-align: top; margin-right: 16px; cursor: pointer; position: relative; }
-			.item {
-				.objectPreviewBlock { width: 344px; height: 216px; margin-bottom: 10px; }
-				.icon.plus { width: 28px; height: 28px; position: absolute; left: 50%; top: 50%; margin: -14px 0px 0px -14px; background-image: url('~img/icon/plus/templateBig.svg'); }
+			.listTemplate {
+				.icon.arrow.left { left: -32px; }
+				.icon.arrow.right { right: -32px; }
 			}
-			.item:before {
-				content: ""; background: rgba(134, 125, 66, 0.08); position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;
-				z-index: 2; height: 216px; border-radius: 8px; display: none;
-			}
-
-			.item > .name { padding: 0px 14px; @include text-overflow-nw; color: $colorDarkGrey; }
-			.item:last-child { margin-right: 0px; }
-			.item:hover:before { display: block; }
-
-			.item.add { border: 1px solid $colorLightGrey; border-radius: 8px; width: 344px; height: 216px; }
-
-			.icon.arrow { 
-				position: absolute; top: 0px; width: 32px; height: 216px; background-image: url('~img/arrow/template0.svg'); 
-				cursor: pointer; background-size: 8px 32px;
-			}
-			.icon.arrow:hover { background-image: url('~img/arrow/template1.svg'); }
-			.icon.arrow.disabled:hover { background-image: url('~img/arrow/template0.svg'); }
-			.icon.arrow.left { left: -32px; transform: rotateY(-180deg); }
-			.icon.arrow.right { right: -32px; }
-
-			.content { white-space: nowrap; position: relative; }
-			.wrap { overflow: hidden; border-radius: 8px; }
-			.scroll { transition: transform 0.2s ease-in-out; display: inline-block; }
 		}
 
 		.section.relation {
