--- a/src/scss/component/list/template.scss
+++ b/src/scss/component/list/template.scss
@@ -12,7 +12,7 @@
 	}
 	.item:before {
 		content: ""; background: rgba(134, 125, 66, 0.08); position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;
-		z-index: 2; height: 216px; border-radius: 8px; display: none;
+		z-index: 2; height: 216px; border-radius: 8px; display: none; pointer-events: none;
 	}
 
 	.item > .name { padding: 0px 14px; @include text-overflow-nw; color: $colorDarkGrey; }
@@ -20,7 +20,7 @@
 		.input { border: 0px; padding: 0px; height: 22px; }
 	}
 	.item:last-child { margin-right: 0px; }
-	.item.hover:before { display: block; }
+	.item.hover:before, .item:hover:before { display: block; }
 
 	.item.add { border: 1px solid $colorLightGrey; border-radius: 8px; width: 344px; height: 216px; }
 
