--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -8,6 +8,7 @@
 		.focusable.isFocused { background: none; }
 		.focusable.isFocused::before { 
 			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(134, 125, 66, 0.1); z-index: 1; 
+			pointer-events: none;
 		}
 
 		.loaderWrapper { border-radius: 4px; border: solid 1px #d2d0c2; height: 48px; width: 100%; }
