--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -16,7 +16,7 @@
 
 .icon.help { width: 28px; height: 28px; background-image: url('~img/icon/help.svg'); }
 
-.icon.checkbox { width: 24px; height: 24px; background-image: url('~img/icon/checkbox0.svg'); cursor: pointer; }
+.icon.checkbox { width: 24px; height: 24px; background-image: url('~img/icon/checkbox0.svg'); }
 .icon.checkbox.active { background-image: url('~img/icon/checkbox1.svg'); }
 
 .icon.relation.default { background-image: url('~img/icon/menu/action/block/relation0.svg'); }
