--- a/src/scss/block/dataview/view/common.scss
+++ b/src/scss/block/dataview/view/common.scss
@@ -9,7 +9,7 @@
 				.cellContent { margin-bottom: 6px; cursor: default !important; }
 				.cellContent:last-child { margin-bottom: 0px; }
 				
-				.cellContent.c-date { color: #6c6a5f; }
+				.cellContent.c-date { color: $colorVeryDarkGrey; }
 
 				.cellContent.c-shortText { @include text-paragraph; margin-bottom: 6px; }
 				.cellContent.c-shortText {
