--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,6 +1,7 @@
 $colorLightGrey: #eae9e0;
 $colorMediumGrey: #aca996;
 $colorDarkGrey: #929082;
+$colorVeryDarkGrey: #6c6a5f;
 $colorBlack: #2c2b27;
 $colorYellow: #ecd91b;
 $colorOrange: #ffb522;
