--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -3,7 +3,7 @@
 .blocks {
 	.block.blockDataview {
 		.cellHead { 
-			text-align: left; color: #6c6a5f; padding: 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
+			text-align: left; color: $colorVeryDarkGrey; padding: 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
 			@include text-overflow-nw; cursor: grab;
 		}
 		.cellHead {
