--- a/src/scss/block/relation.scss
+++ b/src/scss/block/relation.scss
@@ -14,12 +14,13 @@
 		.sides { display: flex; }
 
 		.info { padding: 6px 2px 6px 0px; line-height: 20px; width: 30%; min-width: 40px; flex-shrink: 0; @include text-overflow-nw; }
-		.info.noValue { width: 100%; color: #cbc9bd; cursor: pointer; }
+		.info.noValue { width: 100%; color: #cbc9bd; }
+		.info.noValue.canEdit { cursor: pointer; }
 
 		.info {
 			.name { 
 				display: inline-block; vertical-align: top; @include text-common; line-height: 20px; @include text-overflow-nw; 
-				width: calc(100% - 24px); color: #6c6a5f;
+				width: calc(100% - 24px); color: $colorVeryDarkGrey;
 			}
 		}
 
