--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -10,7 +10,7 @@
 	.content { background: #fff; box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); border-radius: 8px; position: relative; height: 100%; }
 	.loaderWrapper { margin: 0px; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
 	.name { @include text-common; height: 22px; color: $colorBlack; @include text-overflow-nw; margin-bottom: 3px; }
-	.descr { @include text-small; height: 36px; color: #6c6a5f; margin: 2px 0px 7px 0px; @include text-overflow; }
+	.descr { @include text-small; height: 36px; color: $colorVeryDarkGrey; margin: 2px 0px 7px 0px; @include text-overflow; }
 	.link { @include text-small; height: 18px; color: $colorBlack; @include text-overflow-nw;  }
 	.polygon { position: absolute; left: 0px; width: 100%; cursor: pointer; }
 		
