--- a/src/scss/component/switch.scss
+++ b/src/scss/component/switch.scss
@@ -10,7 +10,7 @@
 		transition: $transitionFast; box-shadow: 0px 0px 0px 0.5px rgba(0, 0, 0, 0.1);
 	}	
 }
-.switch.active { background: #6c6a5f; }
+.switch.active { background: $colorVeryDarkGrey; }
 .switch.green.active { background: $colorLime; }
 .switch.orange.active { background: #ffd15b; }
 
