#kt9xnw: Hide description when selecting type

--- a/src/scss/block/featured.scss
+++ b/src/scss/block/featured.scss
@@ -39,7 +39,8 @@
 	}
 }
 
-.editorWrapper.noFeatured {
+.editorWrapper.noSystemBlocks {
+	.blocks .block.blockText.description { display: none; }
 	.blocks .block.blockFeatured { display: none; }
 }
 
