--- a/src/scss/component/filter.scss
+++ b/src/scss/component/filter.scss
@@ -3,7 +3,7 @@
 .filter { padding: 0px 14px; }
 .filter {
 	.inner { position: relative; width: 100%; height: 36px; }
-	.input { padding: 0px !important; height: 28px; line-height: 28px; vertical-align: top; border: 0px !important; width: calc(100% - 24px); }
+	.input { padding: 0px !important; height: 28px; line-height: 28px; vertical-align: top; border: 0px !important; width: calc(100% - 24px); background: none; }
 	.icon.clear { 
 		width: 20px; height: 20px; background-image: url('~img/icon/clear0.svg'); position: absolute; right: 0px; top: 4px;
 		cursor: pointer; opacity: 0;
