--- a/src/scss/menu/preview/object.scss
+++ b/src/scss/menu/preview/object.scss
@@ -3,11 +3,12 @@
 .menus {
 	.menu.menuPreviewObject { width: 344px; height: 228px; }
 	.menu.menuPreviewObject {
-		.content { padding: 0px; }
+		.content { padding: 0px; height: 100%; }
 
 		.objectPreviewBlock { width: 100%; height: 100%; }
 		.objectPreviewBlock {
 			.border { display: none; }
+			.loaderWrapper { border: 0px; }
 		}
 	}	
 }
