#kfcqz3: Change ItemAdd layout in MenuRelationView

--- a/src/scss/menu/block/relation.scss
+++ b/src/scss/menu/block/relation.scss
@@ -62,7 +62,7 @@
 
 	.menu.menuBlockRelationView { width: 640px; }
 	.menu.menuBlockRelationView {
-		.content { overflow: visible; max-height: unset; padding: 0px; }
+		.content { overflow: hidden; max-height: unset; padding: 0px; }
 		.input { @include text-common; line-height: 22px; vertical-align: top; display: inline-block; height: 22px; padding: 0px; border: 0px; padding: 0px; }
 
 		.icon.plus { width: 20px; height: 20px; background-image: url('~img/icon/plus/menu0.svg'); }
